# riskgraph

./: .gitignore  DEPLOY.md  Dockerfile  HN_POST.md  LAUNCH.md  LICENSE  MARKETING.md  MARKETING_FULL.md  PRODUCTHUNT.md  README.md  docker-compose.yml  fly.toml  index.html  openapi.yaml  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
dashboard/: app.js  index.html  style.css
docs/: index.html
scripts/: automate.py  browser-proxy.sh  publish_v2.py  real-chrome-bridge.sh  riskgraph_publish.py  test.sh
src/riskgraph/: __init__.py  anomalies.py  cli.py  graph.py  maintainers.py  scorer.py
src/riskgraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/riskgraph/api/: __init__.py  models.py  server.py
src/riskgraph/ingest/: __init__.py  github.py  npm.py  pypi.py
