[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskgraph"
version = "0.1.0"
description = "Open-Source Threat Intelligence Graph — Credit Score for Open-Source Packages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "RiskGraph"}]
keywords = ["security", "supply-chain", "risk", "npm", "pypi", "threat-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx"]

[project.scripts]
os-risk = "riskgraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
