[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskgraph"
readme = "README.md"
version = "0.1.0"
description = "Open-Source Threat Intelligence Graph — Credit Score for Open-Source Packages"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "RiskGraph"}]
keywords = ["security", "supply-chain", "risk", "npm", "pypi", "threat-intelligence"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx"]

[project.scripts]
os-risk = "riskgraph.cli:main"

[tool.setuptools.packages.find]
where = ["."]
